fix some margin cutoffs

--- a/app/styles/apps/menu/_menu.scss
+++ b/app/styles/apps/menu/_menu.scss
@@ -32,7 +32,7 @@ nav.nav .nav-viewport{
     -moz-animation-delay: 0.5s;
     animation-delay: 0.5s;
 
-    @media (max-width: $screen-sm-max) {
+    @media (max-width: $screen-xs-max) {
       width: 180px;
       position: absolute;
       text-align: left;
@@ -48,7 +48,7 @@ nav.nav .nav-viewport{
       letter-spacing: .5em;
       padding-left: 12px;
 
-      @media (max-width: $screen-sm-max){
+      @media (max-width: $screen-xs-max){
         display: none;
       }
     }
@@ -63,13 +63,13 @@ nav.nav .nav-viewport{
       letter-spacing: .5em;
       padding-left: 0px;
 
-      @media (max-width: $screen-sm-max){
+      @media (max-width: $screen-xs-max){
         display: none;
       }
     }
 
     #A-circle {
-      @media (min-width: $screen-sm-min){
+      @media (min-width: $screen-xs-min){
         left:50%;
         margin-left: -18px;
       }
